Fixed In RTL, hamburger margin is too much in mobile.
Thanks to mohammadZahedian and xet7 !

Fixes #5337

--- a/client/components/cards/minicard.css
+++ b/client/components/cards/minicard.css
@@ -56,12 +56,12 @@
   float: right;
   font-size: 18px;
   padding-right: 30px;
-  padding-left: 10px;
+  padding-left: 5px;
 }
 .minicard-details-menu {
   float: right;
   font-size: 18px;
-  padding-left: 10px;
+  padding-left: 5px;
 }
 @media print {
   .minicard-details-menu,
